Added magistrate courts parsing without captcha, captcha resolver, fixed general courts parsing

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ DB_PASSWORD=jB5cS6mN0a
 DB_NODE_PASSWORD=aA9xB3jI0w
 DB_HOST=127.0.0.1
 DB_PORT=3306
+
+CAPTCHA_TOKEN='dea56610bfec13138c2c3e32bf428cd4'
